feat: utiliza iconos incluidos en Material for MKDocs

--- a/docs/meetups/2024/202401-enero.md
+++ b/docs/meetups/2024/202401-enero.md
@@ -2,7 +2,7 @@
 title: "Ambientes virtuales con venv, pyenv y poetry"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Enero 2024
+# Meetup #PythonCDMX :fontawesome-brands-python: - Enero 2024
 
 <div class="meetup-hero">
     <h1>Ambientes virtuales con venv, pyenv y poetry</h1>
