--- a/docs/meetups/2024/202403-marzo.md
+++ b/docs/meetups/2024/202403-marzo.md
@@ -2,7 +2,7 @@
 title: "Desarrollo de API REST con Flask"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Marzo 2024
+# Meetup #PythonCDMX :fontawesome-brands-python: - Marzo 2024
 
 <div class="meetup-hero">
     <h1>Desarrollo de API REST con Flask</h1>
