--- a/docs/meetups/2024/202404-abril.md
+++ b/docs/meetups/2024/202404-abril.md
@@ -2,7 +2,7 @@
 title: "Desarrollo en Python usando Contenedores"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2024
+# Meetup #PythonCDMX :fontawesome-brands-python: - Abril 2024
 
 <div class="meetup-hero">
     <h1>Desarrollo en Python usando Contenedores</h1>
