--- a/docs/meetups/2024/202405-mayo.md
+++ b/docs/meetups/2024/202405-mayo.md
@@ -2,7 +2,7 @@
 title: "Pydantic: Validaciones de datos con Type Hints"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Mayo 2024
+# Meetup #PythonCDMX :fontawesome-brands-python: - Mayo 2024
 
 <div class="meetup-hero">
     <h1>Pydantic: Validaciones de datos con Type Hints</h1>
