--- a/docs/meetups/2024/202406-junio.md
+++ b/docs/meetups/2024/202406-junio.md
@@ -2,7 +2,7 @@
 title: "Matemáticas y Python: Ciencia Detrás de la Regresión Lineal"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Junio 2024
+# Meetup #PythonCDMX :fontawesome-brands-python: - Junio 2024
 
 <div class="meetup-hero">
     <h1>Matemáticas y Python: Ciencia Detrás de la Regresión Lineal</h1>
