--- a/docs/meetups/2024/202407-julio.md
+++ b/docs/meetups/2024/202407-julio.md
@@ -2,7 +2,7 @@
 title: "¡Doble Charla! Python sin GIL / Esquemas ETL"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Julio 2024
+# Meetup #PythonCDMX :fontawesome-brands-python: - Julio 2024
 
 <div class="meetup-hero">
     <h1>¡Doble Charla! Python sin GIL / Esquemas ETL</h1>
