--- a/docs/meetups/2024/202408-agosto.md
+++ b/docs/meetups/2024/202408-agosto.md
@@ -2,7 +2,7 @@
 title: "Protocolos en Python / Convertirse en Contribuidor Open Source"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Agosto 2024
+# Meetup #PythonCDMX :fontawesome-brands-python: - Agosto 2024
 
 <div class="meetup-hero">
     <h1>Protocolos en Python / Convertirse en Contribuidor Open Source</h1>
