--- a/docs/meetups/2025/202501-enero.md
+++ b/docs/meetups/2025/202501-enero.md
@@ -2,7 +2,7 @@
 title: "Crea extensiones para LibreOffice / PCI DSS en Python"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Enero 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Enero 2025
 
 <div class="meetup-hero">
     <h1>Crea extensiones para LibreOffice / PCI DSS en Python</h1>
