--- a/docs/meetups/2025/202505-mayo.md
+++ b/docs/meetups/2025/202505-mayo.md
@@ -2,7 +2,7 @@
 title: "Publicando un paquete en PyPI"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Mayo 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Mayo 2025
 
 <div class="meetup-hero">
     <h1>Publicando un paquete en PyPI</h1>
