--- a/docs/meetups/2025/202506-junio.md
+++ b/docs/meetups/2025/202506-junio.md
@@ -2,7 +2,7 @@
 title: "Usando Python y software libre"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Junio 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Junio 2025
 
 <div class="meetup-hero">
     <h1>Usando Python y software libre</h1>
