--- a/docs/meetups/2025/202507-julio.md
+++ b/docs/meetups/2025/202507-julio.md
@@ -2,7 +2,7 @@
 title: "Cómo preparar una ambiente de desarrollo con Python desde zero"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Julio 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Julio 2025
 
 <div class="meetup-hero">
     <h1>Cómo preparar una ambiente de desarrollo con Python desde zero</h1>
