--- a/docs/meetups/2025/202508-agosto.md
+++ b/docs/meetups/2025/202508-agosto.md
@@ -2,7 +2,7 @@
 title: "Escalando tus aplicaciones Python con Ray"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Agosto 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Agosto 2025
 
 <div class="meetup-hero">
     <h1>Escalando tus aplicaciones Python con Ray</h1>
