--- a/docs/meetups/2025/202503-marzo.md
+++ b/docs/meetups/2025/202503-marzo.md
@@ -2,7 +2,7 @@
 title: "Agentes de IA / PySide6"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Marzo 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Marzo 2025
 
 <div class="meetup-hero">
     <h1>Agentes de IA / PySide6</h1>
