--- a/docs/meetups/2025/202504-abril.md
+++ b/docs/meetups/2025/202504-abril.md
@@ -2,7 +2,7 @@
 title: "Kubernetes y IA"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Abril 2025
 
 <div class="meetup-hero">
     <h1>Kubernetes y IA</h1>
