--- a/docs/meetups/2025/202504-unam.md
+++ b/docs/meetups/2025/202504-unam.md
@@ -2,7 +2,7 @@
 title: "¡Extra! Sudo Ciencias en la UNAM"
 ---
 
-# Meetup #PythonCDMX <i class="fab fa-python"></i> - Abril 2025
+# Meetup #PythonCDMX :fontawesome-brands-python: - Abril 2025
 
 <div class="meetup-hero">
     <h1>¡Extra! Sudo Ciencias en la UNAM</h1>
